# cluster-turismo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_es.md  pyproject.toml  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: ATRACTIVOS_TURÍSTICOS_NACIONAL_2020.xlsx  README.md
docs/: methodology.md
scripts/: deploy.py  generate_assets.py
src/cluster_turismo/: __init__.py  clustering.py  config.py  data_loader.py  gap_analysis.py  geo_utils.py  preprocessing.py  visualization.py
src/cluster_turismo/cli/: __init__.py  deploy.py  generate.py
src/tourism_gaps/: __init__.py  clustering.py  data_loader.py  gap_analysis.py  preprocessing.py  visualization.py
tests/: __init__.py  conftest.py  test_clustering.py  test_data_loader.py  test_gap_analysis.py  test_geo_utils.py  test_integration.py  test_preprocessing.py  test_visualization.py
tests/fixtures/: sample_attractions.csv
