[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-turismo"
version = "0.1.0"
description = "Clustering espacial y análisis de brechas de atractivos turísticos chilenos usando HDBSCAN"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manuel San Cristóbal", email = "msancristo@fen.uchile.cl"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "hdbscan>=0.8.33",
    "pydeck>=0.8",
    "folium>=0.14",
    "shapely>=2.0",
    "scipy>=1.10",
    "openpyxl>=3.1",
    "scikit-learn>=1.3",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "nbstripout>=0.6",
    "pre-commit>=3.0",
]
notebooks = [
    "jupyterlab>=4.0",
    "nbconvert>=7.0",
    "ipykernel>=6.20",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "nbstripout>=0.6",
    "pre-commit>=3.0",
    "jupyterlab>=4.0",
    "nbconvert>=7.0",
    "ipykernel>=6.20",
]

[project.urls]
Homepage = "https://github.com/manuelsancristobal/cluster-turismo"
Documentation = "https://github.com/manuelsancristobal/cluster-turismo/tree/master/docs"
Repository = "https://github.com/manuelsancristobal/cluster-turismo"
"Bug Tracker" = "https://github.com/manuelsancristobal/cluster-turismo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/cluster_turismo --cov-report=term-missing --cov-report=html"
python_files = "test_*.py"

[tool.coverage.run]
source = ["src/cluster_turismo"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D100", "D101", "D102", "D103"]
